--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
+  "type": "module",
   "dependencies": {
+    "@koa/cors": "^3.3.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
-    "mongodb": "^4.4.1",
-    "nodemon": "^2.0.15"
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.3",
+    "nodemon": "^2.0.16"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  },
+  "scripts": {
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
