--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
+    "koa-body": "^5.0.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-multer": "^1.0.2",
     "koa-router": "^10.1.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
