--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-mount": "^4.0.0",
     "koa-multer": "^1.0.2",
     "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
+    "koa-static-router": "^1.5.0",
+    "koa-swagger-decorator": "^1.8.5",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-plugin-react": "^7.30.0",
     "nodemon": "^2.0.16"
   },
   "scripts": {
