--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "dependencies": {
     "@koa/cors": "^3.3.0",
     "bcryptjs": "^2.4.3",
@@ -16,16 +15,24 @@
     "koa-swagger-decorator": "^1.8.5",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16",
     "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.30.0",
-    "nodemon": "^2.0.16"
+    "jest": "^28.1.1",
+    "nodemon": "^1.3.3",
+    "supertest": "^6.2.3"
   },
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
